# mindswap-smart-contracts

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  TASK.md  build.sh
.circleci/: config.yml
contracts/: CMakeLists.txt
contracts/arbitrage/: CMakeLists.txt  README.md
contracts/arbitrage/include/arbitrage/: arbitrage.hpp
contracts/arbitrage/include/arbitrage/tables/: deposit.hpp  total.hpp
contracts/arbitrage/ricardian/: demo.contracts.md
contracts/arbitrage/src/: arbitrage.cpp
contracts/demo/: CMakeLists.txt
contracts/demo/include/demo/: demo.hpp
contracts/limit/: CMakeLists.txt  README.md
contracts/limit/include/limit/: limit.hpp
contracts/limit/include/limit/tables/: deposit.hpp  market.hpp  order.hpp  stats.hpp
contracts/limit/ricardian/: limit.contracts.md.in
contracts/limit/src/: limit.cpp
contracts/mindswap/include/mindswap/tables/: account.hpp  mindaccount.hpp  stat.hpp
contracts/resources/: resources.hpp
contracts/token/include/token/tables/: account.hpp  stats.hpp
scripts/: .environment  helper.sh
tests/: CMakeLists.txt  contracts.hpp.in  demo_test_api.hpp  demo_tests.cpp  main.cpp  token_test_api.hpp
tests/arbitrage/: arbitrage_test_api.cpp  arbitrage_test_api.hpp  arbitrage_tester.cpp  arbitrage_tester.hpp  arbitrage_tests.cpp
tests/arbitrage/suites/: arbitrage_order_trade_tests.hpp  arbitrage_pair_trade_tests.hpp  close_tests.hpp  on_transfer_tests.hpp  open_tests.hpp  order_trade_tests.hpp  pair_trade_tests.hpp  validate_tests.hpp  withdraw_tests.hpp
tests/limit/: limit_test_api.cpp  limit_test_api.hpp  limit_tester.cpp  limit_tester.hpp  limit_tests.cpp
tests/limit/suites/: close_limit_buy_tests.hpp  close_limit_sell_tests.hpp  close_tests.hpp  create_limit_buy_tests.hpp  create_limit_sell_tests.hpp  fill_buy_order_tests.hpp  fill_sell_order_tests.hpp  on_transfer_tests.hpp  open_tests.hpp  part_fill_buy_order_tests.hpp  part_fill_sell_order_tests.hpp  withdraw_tests.hpp
tests/mindswap/: mindswap_test_api.cpp  mindswap_test_api.hpp  mindswapswap.abi  mindswapswap.wasm  mindswapswap_test_api.hpp  mindswapswap_tests.cpp
tests/token/: token.abi  token.wasm  token_test_api.cpp  token_test_api.hpp
